--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
         "pg": "^8.11.0",
+        "razorpay": "^2.9.0",
         "sequelize": "^6.32.1"
     },
     "devDependencies": {
