--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "init": "^0.1.2",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.2.1",
+        "nodemailer": "^6.9.3",
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
         "pg": "^8.11.0",
