--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
       uses: appleboy/scp-action@master
       env:
         HOST: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
+        username: ${{ secrets.USERNAME }}
         PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
+        password: ${{ secrets.PASSWORD }}
       with:
         source: "."
         target: "~/lendme-backend"
@@ -25,7 +25,7 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
+        username: ${{ secrets.USERNAME }}
         PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSHKEY }}
+        password: ${{ secrets.PASSWORD }}
         script: node src/server.js
