--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,19 +13,19 @@ jobs:
     - name: Copy repository contents via scp
       uses: appleboy/scp-action@master
       env:
-        HOST: ${{ secrets.HOST }}
+        host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
+        port: ${{ secrets.PORT }}
         password: ${{ secrets.PASSWORD }}
       with:
         source: "."
         target: "~/lendme-backend"
 
     - name: Executing remote command
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@v0.1.10
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
+        port: ${{ secrets.PORT }}
         password: ${{ secrets.PASSWORD }}
         script: node src/server.js
