--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         port: ${{ secrets.PORT }}
         password: ${{ secrets.PASSWORD }}
-        script: cd ~/lendme-backend && sudo fuser -k 8080/tcp &&  npm install 
+        script: ${{ secrets.COPY_COMMAND }}
 
     - name: Executing remote command
       uses: appleboy/ssh-action@v0.1.10
@@ -41,4 +41,4 @@ jobs:
         username: ${{ secrets.USERNAME }}
         port: ${{ secrets.PORT }}
         password: ${{ secrets.PASSWORD }}
-        script: nohup node ~/lendme-backend/src/server.js 1> lendme.log 2> lendme.err &
+        script: ${{ secrets.START_COMMAND }}
